Added placeholder in the input field

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,15 +14,18 @@
     <div class="card">
       <div class="header-text">LOGIN</div>
       <div class="card-content">
-        <input class="input-text" type="text" name="name" />
-        <input class="input-text" type="email" name="email" />
-        <input class="input-text" type="password" name="password" />
+        <input class="input-text" type="text" name="name" placeholder="Name" />
+        <input class="input-text" type="email" name="email" placeholder="Email" />
+        <input class="input-text" type="password" name="password" placeholder="Password" />
         
         <div class="container-button">
           <input class="input-button" type="button" value="Confirm" />
         </div>
 
       </div>
+    </div>
+    <div class="simple-text">
+      Do your login to access the chat
     </div>
   </div>
 
