--- a/web/src/public/users.html
+++ b/web/src/public/users.html
@@ -30,7 +30,9 @@
       </div>
     </div>
   </div>
-
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
+  <script src="moment.js"></script>
   <script type="text/javascript" src="./script/config.js"></script>
   <script type="text/javascript" src="./script/utils/genarateTable.js"></script>
   <script type="text/javascript" src="./script/users.js "></script>
