--- a/web/src/public/users.html
+++ b/web/src/public/users.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="./imgs/favicon.png"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -12,9 +13,21 @@
 </head>
 
 <body>
+  
+  <div id="msg-infra"></div>
+
   <div class="container">
+    
     <div class="container-users">
       <div class="card">
+      
+      <div class="go-back">
+      <a href="/">
+        &lt;--
+      </a>
+      </div>
+
+
         <div class="header-text">
           <div class="center-tag">
             Users table
@@ -32,8 +45,10 @@
   </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="./script/config.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+  <script type="text/javascript" src="./script/services/config.js"></script>
   <script type="text/javascript" src="./script/utils/genarateTable.js"></script>
+  <script type="text/javascript" src="./script/utils/getUtils.js"></script>
   <script type="text/javascript" src="./script/users.js "></script>
 
 </body>
