Added logout button

--- a/web/src/public/index.html
+++ b/web/src/public/index.html
@@ -23,7 +23,7 @@
           <div class="content-login">
             <div class="header-text">LOGIN</div>
             <div class="card-content">
-              <input class="input-text" type="text" name="email" placeholder="Email" />
+              <input class="input-text" type="email" name="email" placeholder="Email" />
               <input class="input-text" type="password" name="password" placeholder="Password" />
 
               <div class="container-button">
