--- a/web/src/public/register.html
+++ b/web/src/public/register.html
@@ -24,7 +24,7 @@
             <div class="header-text">REGISTER</div>
             <div class="card-content">
               <input class="input-text" type="text" name="name" placeholder="Name" />
-              <input class="input-text" type="text" name="email" placeholder="Email" />
+              <input class="input-text" type="email" name="email" placeholder="Email" />
               <input class="input-text" type="password" name="password" placeholder="Password" />
               <input class="input-text" type="password" name="password-confirm" placeholder="Confirm Password" />
 
