--- a/web/src/public/users.html
+++ b/web/src/public/users.html
@@ -16,6 +16,12 @@
   
   <div id="msg-infra"></div>
 
+  <div class="logout">
+    <button class="button-logout" onclick="onLogout()">
+      Logout
+    </button>
+  </div>
+
   <div class="container">
     
     <div class="container-users">
